# flash_testing

./: Cargo.toml  README.md
src/: main.rs
templates/: base.html.tera  do_a_thing.html.tera  login.html.tera  minimal.html.tera
